--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
 
 body {
   margin: 0;
+  min-height: 100vh;
+  background-color: #222;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
