copy and styling changes

--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --accent: #EB5E28;
+  --primary-light: #fffcf7;
+  --secondary-light: #CCC5B9;
+  --primary-dark: #252422;
+  --secondary-dark: #13120c;
+  --border-light: #e1e1e1;
+  --border-dark: #090707;
+}
+
 body {
   margin: 0;
   min-height: 100vh;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: 'Lato', sans-serif;
 }
 
 code {
