--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,6 @@
 }
 
 body {
-  margin: 0;
-  min-height: 100vh;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Lato', sans-serif;
@@ -23,4 +21,37 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.rainbow {
+    display: inline-block;
+    color: transparent;
+    background: linear-gradient(
+          to right,
+          rgba(120, 93, 226, 1) 20%,
+          rgba(235, 90, 90, 1) 40%,
+          rgba(238, 193, 106, 1) 60%,
+          rgba(38,247,247,0.8) 80%,
+          rgba(120, 93, 226, 1) 100%
+    );
+    -webkit-background-clip: text;
+    background-clip: text;
+    background-size: 200% 100%;
+    background-repeat: repeat-x;
+    transition: all 0.5s ease;
+    animation: rainbow 3s linear infinite;
+    animation-play-state: paused;
+}
+
+.rainbow:hover {
+    animation-play-state: running;
+}
+
+@keyframes rainbow {
+    0% {
+        background-position-x: 50%;
+    }
+    100% {
+        background-position-x: 250%;
+    }
 }
