--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,6 +22,11 @@ a {
     color: var(--accent);
 }
 
+::selection {
+    color: var(--primary-dark);
+    background: var(--accent);
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
