--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,6 +16,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Lato', sans-serif;
+    position: relative;
 }
 
 a {
@@ -25,6 +26,11 @@ a {
 ::selection {
     color: var(--primary-dark);
     background: var(--accent);
+}
+
+#toast-root {
+    max-width: 100vw;
+    overflow: hidden;
 }
 
 code {
