--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -70,3 +70,12 @@ code {
         background-position-x: 250%;
     }
 }
+
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+.no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
